# openinvoice

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/apps/accounts/: enums.py  mail.py  managers.py  middlewares.py  models.py  permissions.py  querysets.py  serializers.py  session.py  signals.py  urls.py  views.py
api/apps/addresses/: managers.py  models.py  serializers.py
api/apps/analytics/: queries.py  urls.py
api/apps/coupons/: choices.py  fields.py  filters.py  filtersets.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  views.py
api/apps/credit_notes/: apps.py  calculations.py  enums.py  filters.py  filtersets.py  mail.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  views.py
api/apps/customers/: fields.py  filters.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  views.py
api/apps/files/: managers.py  models.py  querysets.py  serializers.py  urls.py  validators.py  views.py
api/apps/integrations/: base.py  enums.py  exceptions.py  fields.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
api/apps/invoices/: enums.py  exceptions.py  filters.py  filtersets.py  mail.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  validators.py  views.py
api/apps/numbering_systems/: enums.py  fields.py  filters.py  filtersets.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  validators.py  views.py
api/apps/payments/: backend.py  exceptions.py  filters.py  managers.py  models.py  querysets.py  serializers.py  views.py
api/apps/portal/: apps.py  authentication.py  crypto.py  schema.py  serializers.py  views.py
api/apps/prices/: choices.py  fields.py  filters.py  filtersets.py  managers.py  models.py  querysets.py  serializers.py  urls.py  validators.py  views.py
api/apps/products/: choices.py  fields.py  filters.py  filtersets.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  views.py
api/apps/quotes/: enums.py  fields.py  filters.py  filtersets.py  mail.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  views.py
api/apps/search/: urls.py  views.py
api/apps/shipping_rates/: choices.py  enums.py  fields.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  views.py
api/apps/stripe/: constants.py  managers.py  models.py  querysets.py  serializers.py  tasks.py  urls.py  views.py
api/apps/tax_ids/: managers.py  models.py  serializers.py
api/apps/tax_rates/: choices.py  querysets.py  serializers.py  urls.py  views.py
api/apps/taxes/: apps.py  choices.py  enums.py  exceptions.py  fields.py  filters.py  filtersets.py  (+8 more)
api/common/: access.py  calculations.py  choices.py  db.py  entitlements.py  enums.py  exceptions.py  fields.py  filters.py  permissions.py  serializers.py  utils.py  validators.py  views.py
api/config/: urls.py
api/templates/: index.html
api/tests/: conftest.py  factories.py
(+1719 files in other folders)
